# SPELL_2.5.4_SRC

./: .gitignore  INSTALL  Makefile.am  README  RELEASENOTES  common.mk  configure.ac
config/: Makefile.am
config/contexts/: context_example.xml
config/server/: server_example.xml
config/spell/: language.xml
data/: Makefile.am
data/Procedures/: TestProcedure.py
drivers/: Makefile.am
drivers/example/: Makefile.am
drivers/example/config/: driver_example.xml
drivers/example/python/: __init__.py  config.py  constants.py  ev.py  gcstime.py  modifiers.py  resources.py  task.py  tc.py  tm.py  usr.py
include/SPELL_CFG/: SPELLbrowsableLibMode.H  SPELLconfiguration.H  SPELLcontextConfig.H  SPELLdriverConfig.H  SPELLexecutorDefaults.H  SPELLxmlConfigReader.H  SPELLxmlConfigReaderFactory.H  SPELLxmlConfigReaderXC.H  SPELLxmlNode.H
include/SPELL_CIF/: SPELLasRun.H  SPELLcif.H  SPELLcifHelper.H  SPELLcifStartupInfo.H  SPELLnotifications.H  SPELLpromptDefinition.H  SPELLstatusInfo.H
include/SPELL_CIFC/: SPELLautomaticCif.H  SPELLncursesShell.H  SPELLstandaloneCif.H
include/SPELL_CIFS/: SPELLcifPromptHelper.H  SPELLdisplayBuffer.H  SPELLrequestProcessor.H  SPELLserverCif.H  SPELLvariableBuffer.H
include/SPELL_CTX/: SPELLclient.H  SPELLclientIPC.H  SPELLclientInterestList.H  SPELLclientListener.H  SPELLclientManager.H  SPELLclientMode.H  SPELLclientNotifier.H  SPELLclientOperation.H  SPELLcontext.H  SPELLcontextConfiguration.H  SPELLdataHelper.H  SPELLdataTable.H  SPELLexecutor.H  SPELLexecutorIPC.H  SPELLexecutorListener.H  SPELLexecutorManager.H  SPELLexecutorModel.H  SPELLexecutorOperation.H  SPELLexecutorStartupParams.H  SPELLlistenerIPC.H  SPELLopenMode.H  SPELLpersistencyTable.H  SPELLserverFile.H  SPELLsharedData.H  SPELLsharedDataOperation.H
include/SPELL_DTA/: SPELLdtaContainer.H  SPELLdtaContainerObject.H  SPELLdtaVariable.H  SPELLdtaVariableObject.H
include/SPELL_EXC/: SPELLastAnalyzer.H  SPELLbreakpoint.H  SPELLbreakpointType.H  SPELLbytecode.H  SPELLcallstack.H  SPELLcallstackIF.H  SPELLchildManager.H  SPELLcodeTreeLine.H  SPELLcodeTreeLineIF.H  SPELLcodeTreeNode.H  SPELLcodeTreeNodeIF.H  SPELLcommand.H  SPELLcommandMailbox.H  SPELLcontroller.H  SPELLcontrollerIF.H  SPELLcontrollerListener.H  SPELLdispatchListener.H  SPELLexecutionMode.H  SPELLexecutionModel.H  SPELLexecutionTrace.H  SPELLexecutor.H  SPELLexecutorConfiguration.H  SPELLexecutorIF.H  SPELLexecutorImpl.H  SPELLexecutorStatus.H  SPELLexecutorUtils.H  SPELLframeManager.H  SPELLgoto.H  SPELLimportChecker.H  SPELLinterpreter.H  SPELLlnotab.H  SPELLscheduleCondition.H  SPELLscheduler.H  SPELLschedulerIF.H  SPELLstepOverMode.H  SPELLuserAction.H  SPELLvarInfo.H  SPELLvariableManager.H  SPELLvariableMonitor.H
include/SPELL_IPC/: SPELLipc.H  SPELLipcChannel.H  SPELLipcClientInterface.H  SPELLipcDataChunk.H  SPELLipcError.H  SPELLipcHelper.H  SPELLipcIncoming.H  SPELLipcInput.H  SPELLipcInterface.H  SPELLipcInterfaceListener.H  SPELLipcMessage.H  SPELLipcMessageMailbox.H  SPELLipcOutput.H  SPELLipcServerInterface.H  SPELLipcServerInterfaceSingle.H  SPELLipcTrash.H  SPELLipc_Context.H  SPELLipc_Executor.H  SPELLipc_Listener.H  SPELLsocket.H  SPELLtimeoutValues.H
include/SPELL_LST/: SPELLlistener.H  SPELLlistenerComm.H  SPELLlistenerContext.H  SPELLlistenerGui.H
include/SPELL_PRC/: SPELLprocess.H  SPELLprocessInfo.H  SPELLprocessManager.H  SPELLprocessStatus.H
include/SPELL_PRD/: SPELLlibrary.H  SPELLprocedure.H  SPELLprocedureManager.H  SPELLprocedureSourceCode.H
include/SPELL_SDB/: SPELLdatabase.H  SPELLdatabaseFactory.H  SPELLdatabaseFile.H  SPELLdatabaseFileSPB.H  SPELLpyDatabaseObject.H
include/SPELL_SYN/: SPELLcondition.H  SPELLconditionFactory.H  SPELLconditionIF.H  SPELLconditionPOSIX.H  SPELLevent.H  SPELLmonitor.H  SPELLmutex.H  SPELLmutexFactory.H  SPELLmutexIF.H  SPELLmutexPOSIX.H  SPELLqueue.H  SPELLsyncError.H  SPELLthread.H  SPELLthreadPool.H  SPELLthreadWork.H  SPELLthreadWorker.H  SPELLtimer.H
include/SPELL_UTIL/: SPELLbase.H  SPELLcompression.H  SPELLerror.H  SPELLlog.H  SPELLpyArgs.H  SPELLpythonHelper.H  SPELLpythonMonitors.H  SPELLtime.H  SPELLutils.H
include/SPELL_WRP/: SPELLconfigDict.H  SPELLconstants.H  SPELLdatabaseManager.H  SPELLdriverManager.H  SPELLpyHandle.H  SPELLpyValue.H  SPELLregistry.H
include/SPELL_WS/: SPELLwarmstart.H  SPELLwsClassDataHandler.H  SPELLwsCustomTypeDataHandler.H  SPELLwsDataCodes.H  SPELLwsDataHandler.H  SPELLwsDataHandlerFactory.H  SPELLwsDbDataHandler.H  SPELLwsDictDataHandler.H  SPELLwsDynamicData.H  SPELLwsFrame.H  SPELLwsInstanceDataHandler.H  SPELLwsListDataHandler.H  SPELLwsNoneDataHandler.H  SPELLwsObjectDataHandler.H  SPELLwsStartupInfo.H  SPELLwsStaticData.H  SPELLwsStorage.H  SPELLwsTimeDataHandler.H  SPELLwsTmItemDataHandler.H  SPELLwsTupleDataHandler.H  SPELLwsWarmStartImpl.H  SPELLwsWorkingMode.H
lib/: Makefile.am
lib/SPELL_CFG/: Makefile.am
lib/SPELL_CFG/src/: SPELLbrowsableLibMode.C  SPELLconfiguration.C  SPELLcontextConfig.C  SPELLdriverConfig.C  SPELLexecutorDefaults.C  (+2 more)
lib/SPELL_CIF/: Makefile.am
lib/SPELL_CIFC/: Makefile.am
lib/SPELL_CIFS/: Makefile.am
lib/SPELL_CIFS/src/: SPELLcifPromptHelper.C  SPELLdisplayBuffer.C  SPELLrequestProcessor.C  SPELLserverCif.C  SPELLvariableBuffer.C
lib/SPELL_CTX/: Makefile.am
lib/SPELL_DTA/: Makefile.am
lib/SPELL_EXC/: Makefile.am
lib/SPELL_IPC/: Makefile.am
lib/SPELL_LST/: Makefile.am
lib/SPELL_PRC/: Makefile.am
lib/SPELL_PRD/: Makefile.am
lib/SPELL_SDB/: Makefile.am
lib/SPELL_SYN/: Makefile.am
lib/SPELL_UTIL/: Makefile.am
lib/SPELL_WRP/: Makefile.am
lib/SPELL_WS/: Makefile.am
scripts/: Makefile.am
scripts/src/: Kill-Server  SPELL-Compile  SPELL-Disassemble  SPELL-Server  Shell  generate-release-nfo.sh  setup-environment.sh
src/: Makefile.am
src/context/: Makefile.am
src/executor/: Makefile.am
src/executorcmd/: Makefile.am
src/listener/: Makefile.am
src/shell/: Makefile.am
src/spell/: Makefile.am
src/spell/spell/config/: reader.py
src/spell/spell/lang/helpers/: rschelper.py
src/spell/spell/lib/adapter/: tm.py  utctime.py
(+137 files in other folders)
